--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ghjhgj </title>
+<title>Welcome </title>
 </head>
 <body> 
   <p> 
-  sasdasd
+  Welcome
   </p>
 </body>
+  
+  <script>
+window.location.href = "../Ali_Çimen_CV.pdf";
+</script>
 </html>
