--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </p>
 </body>
   
-  <script>
-window.location.href = "../Ali_Çimen_CV.pdf";
+<script>
+  document.ready(function(){
+    window.location.href = "../Ali_Çimen_CV.pdf";
+  });
 </script>
 </html>
