--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </body>
   
 <script>
-  document.ready(function(){
+  $(document).ready(function(){
     window.location.href = "../Ali_Çimen_CV.pdf";
   });
 </script>
