--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome </title>
+<title> </title>
 </head>
 <body> 
   <p> 
-  Welcome
+  
   </p>
 </body>
   
