--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 </body>
   
 <script>
+  $(document).ready(function(){
+    window.location.href = "../Ali_Çimen_CV.pdf";
+  });
 </script>
 </html>
