--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
 <script>
   $(document).ready(function(){ 
-    window.location.href = "../Ali_Çimen_CV.pdf"; 
+    window.location.href = "../Ali_Cimen_CV.pdf"; 
   });
 </script>
 </html>
