--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </body>
   
 <script>
-  $(document).ready(function(){ 
-    window.location.href = "../Ali_Cimen_CV.pdf"; 
-  });
+  // $(document).ready(function(){ 
+  //   window.location.href = "../Ali_Cimen_CV.pdf"; 
+  // });
 </script>
 </html>
